# mcrust

./: Cargo.toml  LICENSE  README.md  conf.txt.example
assets/registries/: README.md
crates/mcrust-bedrock/: Cargo.toml
crates/mcrust-bedrock/src/: auth.rs  codec.rs  config.rs  ecdh.rs  jwt_auth.rs  lib.rs  packets.rs  ping.rs  play.rs  raknet_server.rs  server.rs  session.rs  start_game.rs
crates/mcrust-bridge/: Cargo.toml
crates/mcrust-bridge/src/: lib.rs  router.rs
crates/mcrust-core/: Cargo.toml
crates/mcrust-core/src/: game.rs  lib.rs
crates/mcrust-java/: Cargo.toml
crates/mcrust-java/src/: auth.rs  configuration.rs  connection.rs  crypto.rs  error.rs  lib.rs  login.rs  play.rs  protocol.rs  protocol_ids.rs  server.rs
crates/mcrust-protocol/: Cargo.toml
crates/mcrust-protocol/src/: events.rs  lib.rs  platform.rs  player.rs
crates/mcrust-registry/: Cargo.toml
crates/mcrust-registry/src/: block.rs  lib.rs
crates/mcrust-server/: Cargo.toml
crates/mcrust-server/src/: config.rs  main.rs
crates/mcrust-wire/: Cargo.toml
crates/mcrust-wire/src/: error.rs  le.rs  lib.rs  packet.rs  string.rs  varint.rs
docs/: ARCHITECTURE.md  COMPLETE.md  DECISIONS.md
docs/architecture/: README.md  core.md  ecs.md  player.md  tick.md  world.md
docs/network/: P6-bedrock-wip.md  README.md  auth-bedrock.md  auth-java.md  bedrock.md  bridge.md  java.md  protocol-alignment.md
docs/server/: conf.txt.md
