[workspace]
resolver = "2"
members = [
    "crates/mcrust-wire",
    "crates/mcrust-protocol",
    "crates/mcrust-registry",
    "crates/mcrust-java",
    "crates/mcrust-bedrock",
    "crates/mcrust-server",
]
default-members = ["crates/mcrust-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/selimawn/mcrust"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastnbt = "2"
bytes = "1"