[package]
name = "mcrust-bedrock"
description = "Minecraft Bedrock UDP (RakNet unconnected ping/pong)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["net", "rt", "macros", "sync"] }