[package]
name = "mcrust-bedrock"
description = "Minecraft Bedrock UDP (RakNet unconnected ping/pong)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcrust-bridge = { path = "../mcrust-bridge" }
mcrust-protocol = { path = "../mcrust-protocol" }
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4"] }
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["net", "rt", "macros", "sync"] }