[package]
name = "mcrust-bridge"
description = "Session routing between network frontends and game core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcrust-protocol = { path = "../mcrust-protocol" }
mcrust-core = { path = "../mcrust-core" }
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing.workspace = true