[package]
name = "mcrust-java"
description = "Minecraft Java Edition TCP protocol (status, login path)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcrust-wire = { path = "../mcrust-wire" }
fastnbt.workspace = true
mcrust-protocol = { path = "../mcrust-protocol" }
mcrust-bridge = { path = "../mcrust-bridge" }
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
rsa = { version = "0.9", features = ["sha2"] }
aes = "0.8"
cfb-mode = "0.8"
rand = "0.8"
sha1 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
num-bigint = "0.4"
uuid = { version = "1", features = ["v4", "v3"] }
crossbeam-channel = "0.5"