[package]
name = "mcrust-protocol"
description = "Internal events and commands between bridge and core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }