[package]
name = "mcrust-server"
description = "mcrust server binary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mcrust"
path = "src/main.rs"

[dependencies]
mcrust-wire = { path = "../mcrust-wire" }
mcrust-protocol = { path = "../mcrust-protocol" }
mcrust-java = { path = "../mcrust-java" }
mcrust-bedrock = { path = "../mcrust-bedrock" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true