[package]
name = "mcrust-wire"
description = "Minecraft binary primitives: VarInt, MC strings, NBT helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
fastnbt.workspace = true
bytes.workspace = true

[dev-dependencies]